manifest/dev/sede-angular.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sede-ivf
  namespace: ivf
  labels:
    app: sede-ivf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sede-ivf
  template:
    metadata:
      labels:
        app: sede-ivf
    spec:
      containers:
        - name: sede-ivf
          image: hub.alfatecsistemas.es/tdgov/sede-angular:develop
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
      - name: image-pull-secret

---
apiVersion: v1
kind: Service
metadata:
  name: sede-ivf
  namespace: ivf
spec:
  selector:
    app: sede-ivf
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sede-ivf-tls
  namespace: ivf

spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sede2-ivf.laberit.com`)
    kind: Rule
    services:
    - name: sede-ivf
      port: 80
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sede-ivf
  namespace: ivf

spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sede2-ivf.laberit.com`)
    kind: Rule
    services:
    - name: sede-ivf
      port: 80
    middlewares:
        - name: https-redirect
